--- a/src/sass/calendar/FilterList.scss
+++ b/src/sass/calendar/FilterList.scss
@@ -29,6 +29,7 @@
   & .employee {
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-size: 1.6em;
     font-weight: 600;
     padding: 8px 0;
@@ -40,6 +41,7 @@
     & .checkbox {
       accent-color: $lightBlue;
       width: 20px;
+      height: 20px;
       margin: 2px 0 0 24px;
       box-sizing: border-box;
       cursor: pointer;
