--- a/src/sass/calendar/SixMonthsOverview.scss
+++ b/src/sass/calendar/SixMonthsOverview.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  width: 100%;
 
   @media only screen and (max-width: $media-XS) {
     padding: 0 0 0 24px;
@@ -10,8 +9,10 @@
   }
 
   & .singleMonth {
+    min-width: max-content;
     border-right: 1.5px solid $brown;
     border-left: 1.5px solid $brown;
+    overflow-x: hidden;
     @media only screen and (max-width: $media-XS) {
       border-right: 2.5px solid $brown;
       border-left: none;
